--- a/VirtualMemSim/MainWindow.xaml
+++ b/VirtualMemSim/MainWindow.xaml
@@ -2,7 +2,53 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
-    <Grid>
+    <DockPanel>
+        <Grid DockPanel.Dock="Bottom">
+            <Button Name="nextButton" Content="Next" Grid.Row="1" Grid.Column="1" MinWidth="60" MaxHeight="50" Background="AliceBlue" Click="nextButton_Click" />
+
+        </Grid>
+
+        <Grid DockPanel.Dock="Right">
+            <StackPanel Orientation="Vertical">
+                <TextBlock Text="Physical Memory" HorizontalAlignment="Center" Padding="2"/>
+                <DataGrid IsReadOnly="True" ItemsSource="{Binding MMU.FrameTable.Table}" CanUserAddRows="False" CanUserResizeColumns="False" CanUserResizeRows="False"/>
+            </StackPanel>
+        </Grid>
         
-    </Grid>
+        <Grid DockPanel.Dock="Left">
+
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="1*" />
+                </Grid.RowDefinitions>
+                <TextBlock Text="Page Table" HorizontalAlignment="Center" Padding="2" Grid.Row="0"/>
+                <DataGrid Grid.Row="1" IsReadOnly="True" ItemsSource="{Binding CurrentProcess.PageTable}" 
+                          CanUserAddRows="False" CanUserResizeRows="False"
+                          ScrollViewer.CanContentScroll="True"
+                          ScrollViewer.HorizontalScrollBarVisibility="Auto">
+                    
+                </DataGrid>
+            </Grid>
+        </Grid>
+        
+    </DockPanel>
+    <!--<ListBox ItemsSource="{Binding MMU.FrameTable.Table}" Grid.Row="0" Grid.Column="0" MinHeight="150">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Border BorderBrush="Black" BorderThickness="1">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition MinWidth="50" Width="1*" />
+                                <ColumnDefinition MinWidth="50" Width="1*" />
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Text="{Binding Path=Process}" Grid.Column="0" HorizontalAlignment="Left"/>
+                            <TextBlock Text="{Binding Path=Page}" Grid.Column="1" HorizontalAlignment="Right"/>
+                        </Grid>
+                    </Border>
+                    
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+            
+        </ListBox>-->
 </Window>
