--- a/VirtualMemSim/MainWindow.xaml
+++ b/VirtualMemSim/MainWindow.xaml
@@ -1,54 +1,93 @@
 ﻿<Window x:Class="VirtualMemSim.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
-    <DockPanel>
-        <Grid DockPanel.Dock="Bottom">
+        Title="MainWindow" Height="400" Width="575">
+
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="Auto" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="10" />
+            <RowDefinition Height="35" />
+        </Grid.RowDefinitions>
+        
+        <Border Name="procInfoBorder" BorderBrush="Blue" BorderThickness="2" Grid.Row="0" Grid.Column="0" Visibility="Collapsed">
+            <Grid DockPanel.Dock="Left" Margin="15" Grid.Column="1">
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="1*" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="10" />
+                    <ColumnDefinition Width="1*" />
+                </Grid.ColumnDefinitions>
+
+                <Grid Grid.Row="0" Grid.Column="0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+
+                    <Label Content="Process ID: " HorizontalAlignment="Left" Padding="1" TextBlock.FontWeight="Bold" Grid.Row="0" Grid.Column="0"/>
+                    <TextBlock Text="{Binding CurrentProcess.ProcessID}" HorizontalAlignment="Right" Padding="1" Grid.Row="0" Grid.Column="1"/>
+
+                    <Label Content="Number of Pages: " HorizontalAlignment="Left" Padding="1" TextBlock.FontWeight="Bold" Grid.Row="1" Grid.Column="0" />
+                    <TextBlock Text="{Binding CurrentProcess.NumPages}" HorizontalAlignment="Right" Padding="1" Grid.Row="1" Grid.Column="1"/>
+
+                    <Label Content="Number of Faults: " HorizontalAlignment="Left" Padding="1" TextBlock.FontWeight="Bold" Grid.Row="2" Grid.Column="0"/>
+                    <TextBlock Text="{Binding CurrentProcess.NumFaults}" HorizontalAlignment="Right" Padding="1" Grid.Row="2" Grid.Column="1"/>
+
+                    <Label Content="Number of References: " HorizontalAlignment="Left" Padding="1" TextBlock.FontWeight="Bold" Grid.Row="3" Grid.Column="0"/>
+                    <TextBlock Text="{Binding CurrentProcess.NumRef}" HorizontalAlignment="Right" Padding="1" Grid.Row="3" Grid.Column="1"/>
+
+                </Grid>
+            </Grid>
+
+        </Border>
+        
+        <Grid DockPanel.Dock="Bottom" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="6">
             <Button Name="nextButton" Content="Next" Grid.Row="1" Grid.Column="1" MinWidth="60" MaxHeight="50" Background="AliceBlue" Click="nextButton_Click" />
 
         </Grid>
 
-        <Grid DockPanel.Dock="Right">
-            <StackPanel Orientation="Vertical">
-                <TextBlock Text="Physical Memory" HorizontalAlignment="Center" Padding="2"/>
-                <DataGrid IsReadOnly="True" ItemsSource="{Binding MMU.FrameTable.Table}" CanUserAddRows="False" CanUserResizeColumns="False" CanUserResizeRows="False"/>
-            </StackPanel>
-        </Grid>
-        
-        <Grid DockPanel.Dock="Left">
-
-            <Grid>
+        <Border BorderBrush="Yellow" BorderThickness="2" Grid.Column="4" >
+            <Grid DockPanel.Dock="Right" Grid.Column="4">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="1*" />
                 </Grid.RowDefinitions>
-                <TextBlock Text="Page Table" HorizontalAlignment="Center" Padding="2" Grid.Row="0"/>
-                <DataGrid Grid.Row="1" IsReadOnly="True" ItemsSource="{Binding CurrentProcess.PageTable}" 
-                          CanUserAddRows="False" CanUserResizeRows="False"
-                          ScrollViewer.CanContentScroll="True"
-                          ScrollViewer.HorizontalScrollBarVisibility="Auto">
-                    
-                </DataGrid>
+                <TextBlock Text="Physical Memory" Grid.Row="0" HorizontalAlignment="Center" Padding="2" TextBlock.FontWeight="Bold"/>
+                <DataGrid IsReadOnly="True" Grid.Row="1" ItemsSource="{Binding MMU.FrameTable.Table}" CanUserAddRows="False" CanUserResizeColumns="False" CanUserResizeRows="False"/>
             </Grid>
+
+        </Border>
+
+        <Grid Grid.Row="0" Grid.Column="2" Visibility="Collapsed" Name="pageTableGrid">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="1*" />
+            </Grid.RowDefinitions>
+            <TextBlock Text="Page Table" HorizontalAlignment="Center" Padding="2" Grid.Row="0" TextBlock.FontWeight="Bold" />
+            <DataGrid Grid.Row="1"  IsReadOnly="True" ItemsSource="{Binding CurrentProcess.PageTable}" 
+                          CanUserAddRows="False" CanUserResizeRows="False" MaxWidth="180"
+                          ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left"
+                          ScrollViewer.HorizontalScrollBarVisibility="Auto">
+            </DataGrid>
         </Grid>
+
+    </Grid>
         
-    </DockPanel>
-    <!--<ListBox ItemsSource="{Binding MMU.FrameTable.Table}" Grid.Row="0" Grid.Column="0" MinHeight="150">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <Border BorderBrush="Black" BorderThickness="1">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition MinWidth="50" Width="1*" />
-                                <ColumnDefinition MinWidth="50" Width="1*" />
-                            </Grid.ColumnDefinitions>
-                            <TextBlock Text="{Binding Path=Process}" Grid.Column="0" HorizontalAlignment="Left"/>
-                            <TextBlock Text="{Binding Path=Page}" Grid.Column="1" HorizontalAlignment="Right"/>
-                        </Grid>
-                    </Border>
-                    
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-            
-        </ListBox>-->
 </Window>
