--- a/VirtualMemSim/MainWindow.xaml
+++ b/VirtualMemSim/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="VirtualMemSim.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="400" Width="575">
+        Title="MainWindow" Height="400" Width="575" SizeToContent="Width">
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -59,7 +59,7 @@
         </Border>
         
         <Grid DockPanel.Dock="Bottom" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="6">
-            <Button Name="nextButton" Content="Next" Grid.Row="1" Grid.Column="1" MinWidth="60" MaxHeight="50" Background="AliceBlue" Click="nextButton_Click" />
+            <Button Name="nextButton" Content="Next" Background="SlateBlue" Foreground="White" Grid.Row="1" Grid.Column="1" MinWidth="60" MaxHeight="50" Click="nextButton_Click" />
 
         </Grid>
 
@@ -80,7 +80,7 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="1*" />
             </Grid.RowDefinitions>
-            <TextBlock Text="Page Table" HorizontalAlignment="Center" Padding="2" Grid.Row="0" TextBlock.FontWeight="Bold" />
+            <TextBlock Text="Page Table " HorizontalAlignment="Center" Padding="2" Grid.Row="0" TextBlock.FontWeight="Bold" />
             <DataGrid Grid.Row="1"  IsReadOnly="True" ItemsSource="{Binding CurrentProcess.PageTable}" 
                           CanUserAddRows="False" CanUserResizeRows="False" MaxWidth="180"
                           ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left"
