--- a/VirtualMemSim/MainWindow.xaml
+++ b/VirtualMemSim/MainWindow.xaml
@@ -1,24 +1,22 @@
 ﻿<Window x:Class="VirtualMemSim.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="400" Width="575" SizeToContent="Width">
+        Title="Virtual Memory Simulation" Height="400" Width="575" SizeToContent="Width">
+    
+    <Border BorderBrush="DarkGray" BorderThickness="2">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*" />
+                <RowDefinition Height="10" />
+                <RowDefinition Height="35" />
+            </Grid.RowDefinitions>
 
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="Auto" />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="1*" />
-            <RowDefinition Height="10" />
-            <RowDefinition Height="35" />
-        </Grid.RowDefinitions>
-        
-        <Border Name="procInfoBorder" BorderBrush="Blue" BorderThickness="2" Grid.Row="0" Grid.Column="0" Visibility="Collapsed">
-            <Grid DockPanel.Dock="Left" Margin="15" Grid.Column="1">
+            <Grid Name="procInfoGrid" Visibility="Collapsed" Margin="15" Grid.Row="0" Grid.Column="0">
 
                 <Grid.RowDefinitions>
                     <RowDefinition Height="1*" />
@@ -35,11 +33,13 @@
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto" />
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
+
 
                     <Label Content="Process ID: " HorizontalAlignment="Left" Padding="1" TextBlock.FontWeight="Bold" Grid.Row="0" Grid.Column="0"/>
                     <TextBlock Text="{Binding CurrentProcess.ProcessID}" HorizontalAlignment="Right" Padding="1" Grid.Row="0" Grid.Column="1"/>
@@ -56,38 +56,41 @@
                 </Grid>
             </Grid>
 
-        </Border>
-        
-        <Grid DockPanel.Dock="Bottom" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="6">
-            <Button Name="nextButton" Content="Next" Background="SlateBlue" Foreground="White" Grid.Row="1" Grid.Column="1" MinWidth="60" MaxHeight="50" Click="nextButton_Click" />
 
-        </Grid>
+            <Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="5"  >
+                <Button Name="nextButton" Content="Next"  MinWidth="60" MaxHeight="50" Click="nextButton_Click" />
 
-        <Border BorderBrush="Yellow" BorderThickness="2" Grid.Column="4" >
-            <Grid DockPanel.Dock="Right" Grid.Column="4">
+            </Grid>
+
+            <Grid  Grid.Column="2">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="1*" />
                 </Grid.RowDefinitions>
                 <TextBlock Text="Physical Memory" Grid.Row="0" HorizontalAlignment="Center" Padding="2" TextBlock.FontWeight="Bold"/>
-                <DataGrid IsReadOnly="True" Grid.Row="1" ItemsSource="{Binding MMU.FrameTable.Table}" CanUserAddRows="False" CanUserResizeColumns="False" CanUserResizeRows="False"/>
+                <DataGrid IsReadOnly="True" Grid.Row="1" ItemsSource="{Binding MMU.FrameTable.Table}" CanUserAddRows="False" CanUserResizeColumns="False" 
+                          CanUserResizeRows="False"/>
             </Grid>
 
-        </Border>
 
-        <Grid Grid.Row="0" Grid.Column="2" Visibility="Collapsed" Name="pageTableGrid">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="1*" />
-            </Grid.RowDefinitions>
-            <TextBlock Text="Page Table " HorizontalAlignment="Center" Padding="2" Grid.Row="0" TextBlock.FontWeight="Bold" />
-            <DataGrid Grid.Row="1"  IsReadOnly="True" ItemsSource="{Binding CurrentProcess.PageTable}" 
-                          CanUserAddRows="False" CanUserResizeRows="False" MaxWidth="180"
-                          ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left"
-                          ScrollViewer.HorizontalScrollBarVisibility="Auto">
-            </DataGrid>
+            <Grid Grid.Column="1" Grid.Row="0" Name="pageTableGrid" Visibility="Collapsed">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="1*" />
+                </Grid.RowDefinitions>
+                <TextBlock Text="Page Table " HorizontalAlignment="Center" Padding="2" Grid.Row="0" TextBlock.FontWeight="Bold" />
+                <DataGrid Grid.Row="1"  IsReadOnly="True" ItemsSource="{Binding CurrentProcess.PageTable}" 
+                        CanUserAddRows="False" CanUserResizeRows="False" MinWidth="225"
+                        ScrollViewer.CanContentScroll="True" HorizontalAlignment="Left"
+                        ScrollViewer.HorizontalScrollBarVisibility="Auto">
+                </DataGrid>
+            </Grid>
+            
+            <GridSplitter Name="splitter0" Grid.Row="0" Grid.Column="1" Background="Black" HorizontalAlignment="Left" Width="2" Visibility="Collapsed" />
+            <GridSplitter Name="splitter1" Grid.Row="0" Grid.Column="2" Background="Black" HorizontalAlignment="Left" Width="2" Visibility="Collapsed"/>
+
         </Grid>
 
-    </Grid>
+    </Border>
         
 </Window>
