--- a/VirtualMemSim/MainWindow.xaml
+++ b/VirtualMemSim/MainWindow.xaml
@@ -56,11 +56,18 @@
                 </Grid>
             </Grid>
 
-
-            <Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="5"  >
-                <Button Name="nextButton" Content="Next"  MinWidth="60" MaxHeight="50" Click="nextButton_Click" />
-
-            </Grid>
+            <Border BorderBrush="Black" BorderThickness="1" Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="2">
+                <Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="5"  >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*" />
+                        <ColumnDefinition Width="1*" />
+                        <ColumnDefinition Width="1*" />
+                    </Grid.ColumnDefinitions>
+                    <Button Name="nextButton" Content="Next"  MinWidth="60" MaxHeight="50" Click="nextButton_Click" Grid.Column="0"/>
+                    <Button Name="runFaultButton" Content="Run to Fault" MinWidth="60" MaxHeight="50" Click="runFaultButton_Click" Grid.Column="1"/>
+                    <Button Name="runCompleteButton" Content="Run to Completion" MinWidth="60" MaxHeight="50" Click="runCompleteButton_Click" Grid.Column="2"/>
+                </Grid>
+            </Border>
 
             <Grid  Grid.Column="2">
                 <Grid.RowDefinitions>
